--- a/package.json
+++ b/package.json
@@ -1,8 +1,18 @@
 {
-	"name": "FrEkK Fit Party",
-	"private": true,
+	"name": "FrEkK Fit Party, frontend",
 	"version": "2.0.0",
+	"private": true,
+	"description": "Front-end for FrEkK Fit Party",
+	"author": "Torgeir Helgesen Riseth",
 	"type": "module",
+	"homepage": "https://github.com/FrEkK-fun/fit-party-web/blob/main/README.md",
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/FrEkK-fun/fit-party-web.git"
+	},
+	"bugs": {
+		"url": "https://github.com/FrEkK-fun/fit-party-web/issues"
+	},
 	"scripts": {
 		"dev": "vite",
 		"build": "vite build",
