--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,7 +42,13 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Build
+        env:
+            VITE_PROD_BACKEND_URL: ${{ secrets.VITE_PROD_BACKEND_URL }}
+            MODE: production
         run: npm run build
+      # Print environment variables
+      - name: Print environment variables
+        run: printenv
       - name: Setup Pages
         uses: actions/configure-pages@v4
       - name: Upload artifact
