--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,9 +43,11 @@ jobs:
         run: npm ci
       - name: Build
         env:
-            VITE_PROD_BACKEND_URL: ${{ secrets.VITE_PROD_BACKEND_URL }}
-            MODE: production
+          VITE_PROD_BACKEND_URL: ${{ secrets.VITE_PROD_BACKEND_URL }}
+          MODE: production
         run: npm run build
+      - name: Copy 404.html
+        run: cp public/404.html dist/404.html
       - name: Setup Pages
         uses: actions/configure-pages@v4
       - name: Upload artifact
