--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"description": "Front-end for FrEkK Fit Party",
 	"author": "Torgeir Helgesen Riseth",
 	"type": "module",
-	"homepage": "https://github.com/FrEkK-fun/fit-party-web/blob/main/README.md",
+	"homepage": "https://app.frekk.fun",
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.com/FrEkK-fun/fit-party-web.git"
