--- a/package.json
+++ b/package.json
@@ -22,9 +22,6 @@
 	"dependencies": {
 		"@awesome.me/kit-43505c22f8": "^1.0.10",
 		"@fortawesome/fontawesome-svg-core": "^6.6.0",
-		"@fortawesome/free-brands-svg-icons": "^6.6.0",
-		"@fortawesome/free-regular-svg-icons": "^6.6.0",
-		"@fortawesome/free-solid-svg-icons": "^6.6.0",
 		"@fortawesome/react-fontawesome": "^0.2.2",
 		"@testing-library/jest-dom": "^5.17.0",
 		"@testing-library/react": "^13.4.0",
@@ -33,6 +30,7 @@
 		"date-fns": "^2.30.0",
 		"jsonwebtoken": "^9.0.1",
 		"moment": "^2.30.1",
+		"prettier": "^3.3.3",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-markdown": "^9.0.1",
@@ -51,6 +49,7 @@
 		"eslint-plugin-react-hooks": "^5.1.0-rc.0",
 		"eslint-plugin-react-refresh": "^0.4.9",
 		"globals": "^15.9.0",
+		"tailwindcss": "^3.4.15",
 		"vite": "^5.4.1"
 	}
 }
