--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@awesome.me/kit-43505c22f8": "^1.0.10",
 		"@fortawesome/fontawesome-svg-core": "^6.6.0",
 		"@fortawesome/react-fontawesome": "^0.2.2",
+		"@tanstack/react-query": "^5.61.3",
 		"@testing-library/jest-dom": "^5.17.0",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
@@ -30,25 +31,30 @@
 		"date-fns": "^2.30.0",
 		"jsonwebtoken": "^9.0.1",
 		"moment": "^2.30.1",
-		"prettier": "^3.3.3",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-markdown": "^9.0.1",
 		"react-router-dom": "^6.26.2",
 		"react-scripts": "5.0.1",
 		"util": "^0.12.5",
-		"web-vitals": "^2.1.4"
+		"web-vitals": "^2.1.4",
+		"zustand": "^5.0.1"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.9.0",
+		"@tanstack/eslint-plugin-query": "^5.61.3",
 		"@types/react": "^18.3.3",
 		"@types/react-dom": "^18.3.0",
 		"@vitejs/plugin-react": "^4.3.1",
+		"autoprefixer": "^10.4.20",
 		"eslint": "^9.9.0",
 		"eslint-plugin-react": "^7.35.0",
 		"eslint-plugin-react-hooks": "^5.1.0-rc.0",
 		"eslint-plugin-react-refresh": "^0.4.9",
 		"globals": "^15.9.0",
+		"postcss": "^8.4.49",
+		"prettier": "^3.3.3",
+		"prettier-plugin-tailwindcss": "^0.6.9",
 		"tailwindcss": "^3.4.15",
 		"vite": "^5.4.1"
 	}
