--- a/package.json
+++ b/package.json
@@ -30,10 +30,10 @@
 		"buffer": "^6.0.3",
 		"date-fns": "^2.30.0",
 		"jsonwebtoken": "^9.0.1",
+		"markdown-to-jsx": "^7.7.1",
 		"moment": "^2.30.1",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
-		"react-markdown": "^9.0.1",
 		"react-router-dom": "^6.26.2",
 		"react-scripts": "5.0.1",
 		"util": "^0.12.5",
